# GPW

./: CMakeLists.txt
Sources/Client/: main.cpp
Sources/Server/: main.cpp
